--- a/index.html
+++ b/index.html
@@ -476,6 +476,102 @@
             </div>
         </section>
 
+        <!-- Blog/Articles Section -->
+        <section class="blog" id="blog">
+            <h2 class="section-title">Blog & Articles</h2>
+            <p class="section-subtitle">Sharing my journey, tutorials, and project insights</p>
+            <div class="blog-grid">
+                <article class="blog-card" onclick="openArticle('getting-started-react')">
+                    <div class="blog-image">
+                        <div class="blog-image-placeholder">
+                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <circle cx="12" cy="12" r="10"/>
+                                <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
+                                <path d="M2 12h20"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-meta">
+                            <span class="blog-date">14 Jan 2026</span>
+                            <span class="blog-read-time">5 min read</span>
+                        </div>
+                        <h3 class="blog-title">Getting Started with React: A Beginner's Guide</h3>
+                        <p class="blog-excerpt">
+                            Learn the fundamentals of React.js and build your first interactive web application. 
+                            This guide covers components, props, state, and hooks.
+                        </p>
+                        <div class="blog-tags">
+                            <span class="blog-tag">React</span>
+                            <span class="blog-tag">JavaScript</span>
+                            <span class="blog-tag">Tutorial</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="blog-card" onclick="openArticle('portfolio-journey')">
+                    <div class="blog-image">
+                        <div class="blog-image-placeholder">
+                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                                <path d="m2 17 10 5 10-5"/>
+                                <path d="m2 12 10 5 10-5"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-meta">
+                            <span class="blog-date">10 Jan 2026</span>
+                            <span class="blog-read-time">8 min read</span>
+                        </div>
+                        <h3 class="blog-title">Building My Portfolio: Design & Development Journey</h3>
+                        <p class="blog-excerpt">
+                            Behind the scenes of creating this portfolio website. From design decisions to 
+                            implementation challenges and lessons learned along the way.
+                        </p>
+                        <div class="blog-tags">
+                            <span class="blog-tag">Web Design</span>
+                            <span class="blog-tag">CSS</span>
+                            <span class="blog-tag">Experience</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="blog-card" onclick="openArticle('docker-basics')">
+                    <div class="blog-image">
+                        <div class="blog-image-placeholder">
+                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                                <rect x="7" y="7" width="3" height="3"/>
+                                <rect x="7" y="14" width="3" height="3"/>
+                                <rect x="14" y="7" width="3" height="3"/>
+                                <rect x="14" y="14" width="3" height="3"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-meta">
+                            <span class="blog-date">5 Jan 2026</span>
+                            <span class="blog-read-time">10 min read</span>
+                        </div>
+                        <h3 class="blog-title">Docker Basics: Containerizing Your First Application</h3>
+                        <p class="blog-excerpt">
+                            A practical guide to Docker containerization. Learn how to create Dockerfiles, 
+                            manage containers, and deploy your applications efficiently.
+                        </p>
+                        <div class="blog-tags">
+                            <span class="blog-tag">Docker</span>
+                            <span class="blog-tag">DevOps</span>
+                            <span class="blog-tag">Tutorial</span>
+                        </div>
+                    </div>
+                </article>
+            </div>
+            <div class="blog-cta">
+                <a href="blog.html" class="blog-view-all">View All Articles →</a>
+            </div>
+        </section>
+
         <!-- Contact Section -->
         <section class="contact">
             <h2 class="section-title">Contact</h2>
@@ -602,7 +698,16 @@
                 <line x1="12" y1="17" x2="12" y2="21"/>
             </svg>
         </a>
-        <a href="#contact" class="dock-item" data-tooltip="Contact">
+        <a href="#blog" class="dock-item" data-tooltip="Blog">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                <polyline points="14,2 14,8 20,8"/>
+                <line x1="16" y1="13" x2="8" y2="13"/>
+                <line x1="16" y1="17" x2="8" y2="17"/>
+                <polyline points="10,9 9,9 8,9"/>
+            </svg>
+        </a>
+        <a href="#contact" class="dock-item" data-tooltip="Contact"></a>
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
             </svg>
