--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Particle Background Canvas -->
+    <canvas id="particleCanvas"></canvas>
+    
     <!-- Dark Mode Toggle -->
     <div class="theme-toggle">
         <input type="checkbox" id="theme-switch" class="theme-switch">
